Posfixo/posfixo.output
Terminals unused in grammar

    ABRE_PARENTESES
    FECHA_PARENTESES


Grammar

    0 $accept: ex $end

    1 ex: expr
    2   | expr_bool

    3 expr: expr MAIS termo
    4     | expr MENOS termo
    5     | termo

    6 termo: termo ASTERISCO fator
    7      | termo DIV fator
    8      | fator

    9 fator: IDENT_A

   10 expr_bool: expr_bool OR fator_bool
   11          | expr_bool AND fator_bool
   12          | fator_bool

   13 fator_bool: IDENT_B


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENT_A (258) 9
    IDENT_B (259) 13
    MAIS (260) 3
    MENOS (261) 4
    OR (262) 10
    ASTERISCO (263) 6
    DIV (264) 7
    ABRE_PARENTESES (265)
    FECHA_PARENTESES (266)
    AND (267) 11


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    ex (14)
        on left: 1 2
        on right: 0
    expr (15)
        on left: 3 4 5
        on right: 1 3 4
    termo (16)
        on left: 6 7 8
        on right: 3 4 5 6 7
    fator (17)
        on left: 9
        on right: 6 7 8
    expr_bool (18)
        on left: 10 11 12
        on right: 2 10 11
    fator_bool (19)
        on left: 13
        on right: 10 11 12


State 0

    0 $accept: • ex $end

    IDENT_A  shift, and go to state 1
    IDENT_B  shift, and go to state 2

    ex          go to state 3
    expr        go to state 4
    termo       go to state 5
    fator       go to state 6
    expr_bool   go to state 7
    fator_bool  go to state 8


State 1

    9 fator: IDENT_A •

    $default  reduce using rule 9 (fator)


State 2

   13 fator_bool: IDENT_B •

    $default  reduce using rule 13 (fator_bool)


State 3

    0 $accept: ex • $end

    $end  shift, and go to state 9


State 4

    1 ex: expr •
    3 expr: expr • MAIS termo
    4     | expr • MENOS termo

    MAIS   shift, and go to state 10
    MENOS  shift, and go to state 11

    $default  reduce using rule 1 (ex)


State 5

    5 expr: termo •
    6 termo: termo • ASTERISCO fator
    7      | termo • DIV fator

    ASTERISCO  shift, and go to state 12
    DIV        shift, and go to state 13

    $default  reduce using rule 5 (expr)


State 6

    8 termo: fator •

    $default  reduce using rule 8 (termo)


State 7

    2 ex: expr_bool •
   10 expr_bool: expr_bool • OR fator_bool
   11          | expr_bool • AND fator_bool

    OR   shift, and go to state 14
    AND  shift, and go to state 15

    $default  reduce using rule 2 (ex)


State 8

   12 expr_bool: fator_bool •

    $default  reduce using rule 12 (expr_bool)


State 9

    0 $accept: ex $end •

    $default  accept


State 10

    3 expr: expr MAIS • termo

    IDENT_A  shift, and go to state 1

    termo  go to state 16
    fator  go to state 6


State 11

    4 expr: expr MENOS • termo

    IDENT_A  shift, and go to state 1

    termo  go to state 17
    fator  go to state 6


State 12

    6 termo: termo ASTERISCO • fator

    IDENT_A  shift, and go to state 1

    fator  go to state 18


State 13

    7 termo: termo DIV • fator

    IDENT_A  shift, and go to state 1

    fator  go to state 19


State 14

   10 expr_bool: expr_bool OR • fator_bool

    IDENT_B  shift, and go to state 2

    fator_bool  go to state 20


State 15

   11 expr_bool: expr_bool AND • fator_bool

    IDENT_B  shift, and go to state 2

    fator_bool  go to state 21


State 16

    3 expr: expr MAIS termo •
    6 termo: termo • ASTERISCO fator
    7      | termo • DIV fator

    ASTERISCO  shift, and go to state 12
    DIV        shift, and go to state 13

    $default  reduce using rule 3 (expr)


State 17

    4 expr: expr MENOS termo •
    6 termo: termo • ASTERISCO fator
    7      | termo • DIV fator

    ASTERISCO  shift, and go to state 12
    DIV        shift, and go to state 13

    $default  reduce using rule 4 (expr)


State 18

    6 termo: termo ASTERISCO fator •

    $default  reduce using rule 6 (termo)


State 19

    7 termo: termo DIV fator •

    $default  reduce using rule 7 (termo)


State 20

   10 expr_bool: expr_bool OR fator_bool •

    $default  reduce using rule 10 (expr_bool)


State 21

   11 expr_bool: expr_bool AND fator_bool •

    $default  reduce using rule 11 (expr_bool)
